lib/ffi/ffi_webgpu.dart


  late final _wgpu_compute_pass_encoder_dispatch_workgroups_indirectPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      WGpuComputePassEncoder, WGpuBuffer, double_int53_t)>>(
          'wgpu_compute_pass_encoder_dispatch_workgroups_indirect');
  late final _wgpu_compute_pass_encoder_dispatch_workgroups_indirect =
      _wgpu_compute_pass_encoder_dispatch_workgroups_indirectPtr
          .asFunction<void Function(WGpuComputePassEncoder, WGpuBuffer, int)>();

  late final ffi.Pointer<WGpuComputePassTimestampWrites>
      _WGPU_COMPUTE_PASS_TIMESTAMP_WRITES_DEFAULT_INITIALIZER =
      _lookup<WGpuComputePassTimestampWrites>(
          'WGPU_COMPUTE_PASS_TIMESTAMP_WRITES_DEFAULT_INITIALIZER');

  WGpuComputePassTimestampWrites
      get WGPU_COMPUTE_PASS_TIMESTAMP_WRITES_DEFAULT_INITIALIZER =>
          _WGPU_COMPUTE_PASS_TIMESTAMP_WRITES_DEFAULT_INITIALIZER.ref;

  late final ffi.Pointer<WGpuComputePassDescriptor>
      _WGPU_COMPUTE_PASS_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuComputePassDescriptor>(
          'WGPU_COMPUTE_PASS_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuComputePassDescriptor
      get WGPU_COMPUTE_PASS_DESCRIPTOR_DEFAULT_INITIALIZER =>
          _WGPU_COMPUTE_PASS_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_render_commands_mixin(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_render_commands_mixin(
      object,
    );
  }

  late final _wgpu_is_render_commands_mixinPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_render_commands_mixin');
  late final _wgpu_is_render_commands_mixin = _wgpu_is_render_commands_mixinPtr
      .asFunction<int Function(WGpuObjectBase)>();

  void wgpu_render_commands_mixin_set_index_buffer(
    WGpuRenderCommandsMixin renderCommandsMixin,
    WGpuBuffer buffer,
    int indexFormat,
    int offset,
    int size,
  ) {
    return _wgpu_render_commands_mixin_set_index_buffer(
      renderCommandsMixin,
      buffer,
      indexFormat,
      offset,
      size,
    );
  }

  late final _wgpu_render_commands_mixin_set_index_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderCommandsMixin,
              WGpuBuffer,
              WGPU_INDEX_FORMAT,
              double_int53_t,
              double_int53_t)>>('wgpu_render_commands_mixin_set_index_buffer');
  late final _wgpu_render_commands_mixin_set_index_buffer =
      _wgpu_render_commands_mixin_set_index_bufferPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, WGpuBuffer, int, int, int)>();

  void wgpu_render_commands_mixin_set_vertex_buffer(
    WGpuRenderCommandsMixin renderCommandsMixin,
    int slot,
    WGpuBuffer buffer,
    int offset,
    int size,
  ) {
    return _wgpu_render_commands_mixin_set_vertex_buffer(
      renderCommandsMixin,
      slot,
      buffer,
      offset,
      size,
    );
  }

  late final _wgpu_render_commands_mixin_set_vertex_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderCommandsMixin,
              ffi.Int32,
              WGpuBuffer,
              double_int53_t,
              double_int53_t)>>('wgpu_render_commands_mixin_set_vertex_buffer');
  late final _wgpu_render_commands_mixin_set_vertex_buffer =
      _wgpu_render_commands_mixin_set_vertex_bufferPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, int, WGpuBuffer, int, int)>();

  void wgpu_render_commands_mixin_draw(
    WGpuRenderCommandsMixin renderCommandsMixin,
    int vertexCount,
    int instanceCount,
    int firstVertex,
    int firstInstance,
  ) {
    return _wgpu_render_commands_mixin_draw(
      renderCommandsMixin,
      vertexCount,
      instanceCount,
      firstVertex,
      firstInstance,
    );
  }

  late final _wgpu_render_commands_mixin_drawPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuRenderCommandsMixin, ffi.Uint32, ffi.Uint32,
              ffi.Uint32, ffi.Uint32)>>('wgpu_render_commands_mixin_draw');
  late final _wgpu_render_commands_mixin_draw =
      _wgpu_render_commands_mixin_drawPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, int, int, int, int)>();

  void wgpu_render_commands_mixin_draw_indexed(
    WGpuRenderCommandsMixin renderCommandsMixin,
    int indexCount,
    int instanceCount,
    int firstVertex,
    int baseVertex,
    int firstInstance,
  ) {
    return _wgpu_render_commands_mixin_draw_indexed(
      renderCommandsMixin,
      indexCount,
      instanceCount,
      firstVertex,
      baseVertex,
      firstInstance,
    );
  }

  late final _wgpu_render_commands_mixin_draw_indexedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderCommandsMixin,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Int32,
              ffi.Uint32)>>('wgpu_render_commands_mixin_draw_indexed');
  late final _wgpu_render_commands_mixin_draw_indexed =
      _wgpu_render_commands_mixin_draw_indexedPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, int, int, int, int, int)>();

  void wgpu_render_commands_mixin_draw_indirect(
    WGpuRenderCommandsMixin renderCommandsMixin,
    WGpuBuffer indirectBuffer,
    int indirectOffset,
  ) {
    return _wgpu_render_commands_mixin_draw_indirect(
      renderCommandsMixin,
      indirectBuffer,
      indirectOffset,
    );
  }

  late final _wgpu_render_commands_mixin_draw_indirectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuRenderCommandsMixin, WGpuBuffer,
              double_int53_t)>>('wgpu_render_commands_mixin_draw_indirect');
  late final _wgpu_render_commands_mixin_draw_indirect =
      _wgpu_render_commands_mixin_draw_indirectPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, WGpuBuffer, int)>();

  void wgpu_render_commands_mixin_draw_indexed_indirect(
    WGpuRenderCommandsMixin renderCommandsMixin,
    WGpuBuffer indirectBuffer,
    int indirectOffset,
  ) {
    return _wgpu_render_commands_mixin_draw_indexed_indirect(
      renderCommandsMixin,
      indirectBuffer,
      indirectOffset,
    );
  }

  late final _wgpu_render_commands_mixin_draw_indexed_indirectPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  WGpuRenderCommandsMixin, WGpuBuffer, double_int53_t)>>(
      'wgpu_render_commands_mixin_draw_indexed_indirect');
  late final _wgpu_render_commands_mixin_draw_indexed_indirect =
      _wgpu_render_commands_mixin_draw_indexed_indirectPtr.asFunction<
          void Function(WGpuRenderCommandsMixin, WGpuBuffer, int)>();

  int wgpu_is_render_pass_encoder(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_render_pass_encoder(
      object,
    );
  }

  late final _wgpu_is_render_pass_encoderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_render_pass_encoder');
  late final _wgpu_is_render_pass_encoder = _wgpu_is_render_pass_encoderPtr
      .asFunction<int Function(WGpuObjectBase)>();

  void wgpu_render_pass_encoder_set_viewport(
    WGpuRenderPassEncoder encoder,
    double x,
    double y,
    double width,
    double height,
    double minDepth,
    double maxDepth,
  ) {
    return _wgpu_render_pass_encoder_set_viewport(
      encoder,
      x,
      y,
      width,
      height,
      minDepth,
      maxDepth,
    );
  }

  late final _wgpu_render_pass_encoder_set_viewportPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderPassEncoder,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float)>>('wgpu_render_pass_encoder_set_viewport');
  late final _wgpu_render_pass_encoder_set_viewport =
      _wgpu_render_pass_encoder_set_viewportPtr.asFunction<
          void Function(WGpuRenderPassEncoder, double, double, double, double,
              double, double)>();

  void wgpu_render_pass_encoder_set_scissor_rect(
    WGpuRenderPassEncoder encoder,
    int x,
    int y,
    int width,
    int height,
  ) {
    return _wgpu_render_pass_encoder_set_scissor_rect(
      encoder,
      x,
      y,
      width,
      height,
    );
  }

  late final _wgpu_render_pass_encoder_set_scissor_rectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderPassEncoder,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_render_pass_encoder_set_scissor_rect');
  late final _wgpu_render_pass_encoder_set_scissor_rect =
      _wgpu_render_pass_encoder_set_scissor_rectPtr.asFunction<
          void Function(WGpuRenderPassEncoder, int, int, int, int)>();

  void wgpu_render_pass_encoder_set_blend_constant(
    WGpuRenderPassEncoder encoder,
    double r,
    double g,
    double b,
    double a,
  ) {
    return _wgpu_render_pass_encoder_set_blend_constant(
      encoder,
      r,
      g,
      b,
      a,
    );
  }

  late final _wgpu_render_pass_encoder_set_blend_constantPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderPassEncoder,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double)>>('wgpu_render_pass_encoder_set_blend_constant');
  late final _wgpu_render_pass_encoder_set_blend_constant =
      _wgpu_render_pass_encoder_set_blend_constantPtr.asFunction<
          void Function(
              WGpuRenderPassEncoder, double, double, double, double)>();

  void wgpu_render_pass_encoder_set_stencil_reference(
    WGpuRenderPassEncoder encoder,
    int stencilValue,
  ) {
    return _wgpu_render_pass_encoder_set_stencil_reference(
      encoder,
      stencilValue,
    );
  }

  late final _wgpu_render_pass_encoder_set_stencil_referencePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuRenderPassEncoder,
              ffi.Uint32)>>('wgpu_render_pass_encoder_set_stencil_reference');
  late final _wgpu_render_pass_encoder_set_stencil_reference =
      _wgpu_render_pass_encoder_set_stencil_referencePtr
          .asFunction<void Function(WGpuRenderPassEncoder, int)>();

  void wgpu_render_pass_encoder_begin_occlusion_query(
    WGpuRenderPassEncoder encoder,
    int queryIndex,
  ) {
    return _wgpu_render_pass_encoder_begin_occlusion_query(
      encoder,
      queryIndex,
    );
  }

  late final _wgpu_render_pass_encoder_begin_occlusion_queryPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(WGpuRenderPassEncoder, ffi.Int32)>>(
      'wgpu_render_pass_encoder_begin_occlusion_query');
  late final _wgpu_render_pass_encoder_begin_occlusion_query =
      _wgpu_render_pass_encoder_begin_occlusion_queryPtr
          .asFunction<void Function(WGpuRenderPassEncoder, int)>();

  void wgpu_render_pass_encoder_end_occlusion_query(
    WGpuRenderPassEncoder encoder,
  ) {
    return _wgpu_render_pass_encoder_end_occlusion_query(
      encoder,
    );
  }

  late final _wgpu_render_pass_encoder_end_occlusion_queryPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuRenderPassEncoder)>>(
          'wgpu_render_pass_encoder_end_occlusion_query');
  late final _wgpu_render_pass_encoder_end_occlusion_query =
      _wgpu_render_pass_encoder_end_occlusion_queryPtr
          .asFunction<void Function(WGpuRenderPassEncoder)>();

  void wgpu_render_pass_encoder_execute_bundles(
    WGpuRenderPassEncoder encoder,
    ffi.Pointer<WGpuRenderBundle> bundles,
    int numBundles,
  ) {
    return _wgpu_render_pass_encoder_execute_bundles(
      encoder,
      bundles,
      numBundles,
    );
  }
